Fix spacing so that both 140/280 char tweets look decent
Former-commit-id: 5f08726122d26b2bb0858fbff2fa7160e1278f55

--- a/content/stylesheets/twitter.sass
+++ b/content/stylesheets/twitter.sass
@@ -19,7 +19,7 @@ $quaternary: #f5f5f5
 
       ul
         li
-          margin: 10px 0
+          margin: 15px 0
 
           .meta
             font-family: $sans_serif
@@ -36,3 +36,6 @@ $quaternary: #f5f5f5
 
               &:visited
                 color: $secondary
+
+          .tweet-linebreak
+            margin: 3px 0 0 0
